# lossless-agent

./: .gitignore  .mcp.json  CLA.md  CONTRIBUTING.md  README.md  SECURITY.md  coverage.xml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
benchmarks/compression/: COMPRESSION_BENCHMARK_REPORT.md  compression_results.json  run_compression_benchmark.py
benchmarks/longmemeval/: BENCHMARK_REPORT.md  BENCHMARK_REPORT_SEMANTIC.md  results_full_baseline.jsonl  results_full_eval.jsonl  results_full_lcm.jsonl  results_oracle_test.jsonl  results_oracle_test_errors.json  results_oracle_test_eval_claude-haiku-4-5.jsonl  results_s_20.jsonl  results_s_20_eval_claude-haiku-4-5.jsonl  results_semantic_eval.jsonl  results_semantic_lcm.jsonl  run.sh  run_benchmark.py  run_full_benchmark.py  run_semantic_benchmark.py
benchmarks/memoryloss/: README.md  result_dag.json
docs/: LAYERED_ARCHITECTURE_SPEC.md  adapters.md  api.md  architecture.md  configuration.md  dag-visualization.md  dag_data.json  framework-setup.md  index.md  mkdocs.yml  quickstart.md  semantic-retrieval.md  visualization.html
docs/adr/: 001-postgres-fts-double-tsvector.md
docs/specs/: PR3-raw-vector-retrieval.md
examples/: anthropic_agents_setup.py  anthropic_sdk_middleware.py  basic_integration.py  claude_code_middleware.py  framework_integration.py  google_adk_middleware.py  google_adk_setup.py  openclaw_setup.py
examples/claude_code_setup/: .mcp.json  README.md
scripts/: ingest_openclaw.py
src/lossless_agent/: __init__.py  config.py  mcp_server.py
tests/: conftest.py  test_config.py  test_config_new_fields.py  test_config_wiring.py  test_mcp_server.py
tests/test_adapters/: test_base.py  test_base_impl.py  test_generic.py  test_hermes.py  test_openclaw.py  test_simple.py
tests/test_engine/: test_assembler.py  test_assembler_repair.py  test_bm25_assembler.py  test_bootstrap.py  test_circuit_breaker.py  test_compaction.py  test_delegation_guard.py  test_dual_threshold.py  test_embedder.py  test_embedder_local.py  test_escalation.py  test_expansion_auth.py  test_expansion_policy.py  test_fts_safety.py  test_fusion.py  test_heartbeat.py  test_integrity.py  test_large_files.py  test_large_files_v2.py  test_media.py  (+10 more)
(+72 files in other folders)
