[build-system]
requires = ["setuptools>=64", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "lossless-agent"
version = "0.1.0"
description = "Lossless context management for AI agents"
requires-python = ">=3.9"
license = {text = "AGPL-3.0-or-later"}
dependencies = [
    "tiktoken",
    # MCP server (lossless-agent-mcp entry point). mcp requires Python 3.10+,
    # so it's skipped on 3.9 — where the server can't run anyway and the test
    # suite mocks the module.
    "mcp>=1.0; python_version >= '3.10'",
]

[project.optional-dependencies]
local-embeddings = [
    "fastembed>=0.3",
]
postgres = [
    "psycopg2-binary>=2.9",
]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "mypy",
    # Pin ruff: its default ruleset expanded sharply in 0.16, so an unpinned
    # install drifts CI. Pin a known-good version; bump deliberately in its own PR.
    "ruff==0.15.0",
    "mkdocs",
    "mkdocs-material",
]

[project.scripts]
lossless-agent-mcp = "lossless_agent.mcp_server:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py39"
# Ruleset is ruff's default (E + F); reproducibility comes from the pinned ruff
# version in [dev], not from narrowing the selection.

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
    "psycopg2",
    "psycopg2.*",
    "mcp",
    "mcp.*",
    "fastembed",
    "fastembed.*",
]
ignore_missing_imports = true
